Fix vertical lines overflowing

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -235,7 +235,7 @@ body {
     &[data-line-direction="right"] {
         .texthooker-line {
             // TODO Fix this hackiness.
-            max-height: calc(~'100% - 52px');
+            max-height: calc(~'100% - 52px - 57px');
             padding: 0 @line-spacing;
 
             writing-mode: vertical-rl;
